# snap-stochastic-simulator

./: .gitignore  FLUID_BENCHMARK_NOTES.md  README.md  RESEARCH_VALIDATION_NOTES.md  compare_full_vs_light.py  compare_light_vs_fluid.py  compare_long_vs_many_replications.py  fluid_steady_state.py  light_simulation.py  pyproject.toml  run_simulation_demo.py  stochastic_simulation.py
.github/workflows/: tests.yml
configs/: __init__.py  paper_cc2_baseline.py
experiments/: call_center_baseline_analysis.py  cohort_constant_arrival.py  cohort_policy_analysis.py  nonstationary_attempts.py
outputs/: full_vs_light_comparison.csv  light_vs_fluid_comparison.csv  long_vs_many_replications_comparison.csv
outputs/nonstationary_attempts/: sinusoidal_amp_025_attempt_distribution.csv  sinusoidal_amp_025_attempt_metrics.csv  sinusoidal_amp_025_fluid_path.csv  sinusoidal_amp_025_mean_attempts_over_completed_enrollments.csv  sinusoidal_amp_025_path_comparison.csv  sinusoidal_amp_025_replication_metrics.csv  sinusoidal_amp_025_stochastic_mean_path.csv  sinusoidal_amp_050_attempt_distribution.csv  sinusoidal_amp_050_attempt_metrics.csv  sinusoidal_amp_050_fluid_path.csv  sinusoidal_amp_050_mean_attempts_over_completed_enrollments.csv  sinusoidal_amp_050_path_comparison.csv  (+2 more)
parameter_sample/: call center parameters.tex
scripts/: __init__.py  research_utils.py  run_invariance_checks.py  run_policy_evaluation.py  run_sample_path_plots.py  run_steady_state_comparison.py  run_stress_tests.py  run_weekly_research.py
tests/: test_cohort_policy_analysis.py  test_stochastic_simulation.py
(+4 files in other folders)
