[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-stochastic-simulator"
version = "0.1.0"
description = "Event-driven stochastic simulator for a SNAP call-center model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["stochastic_simulation", "light_simulation", "fluid_steady_state"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
